# Brayns-UC-Fractals

./: .gitignore  CMakeLists.txt  DOCKER.md  Dockerfile  README.md
common/: commonTypes.h  log.h
module/: CMakeLists.txt  fractals.cpp
module/ispc/render/: FractalsRenderer.cpp  FractalsRenderer.h  FractalsRenderer.ispc  MengerSpongeRenderer.h  MengerSpongeRenderer.ispc  Utils.ih  Utils.ispc  VoxelizerRenderer.ispc
module/ispc/renderer/: MengerSpongeRenderer.cpp  VoxelizerRenderer.h
plugin/: CMakeLists.txt  FractalsPlugin.cpp  FractalsPlugin.h  json.hpp
